--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-	"name": "obsidian-sample-plugin",
+	"name": "hover-to-reveal-sidebar",
 	"version": "1.0.0",
-	"description": "This is a sample plugin for Obsidian (https://obsidian.md)",
+	"description": "Hover to reveal sidebar for vertical tabs. Gives you a better experience when using vertical tabs just like app like Arc browser",
 	"main": "main.js",
 	"scripts": {
 		"dev": "node esbuild.config.mjs",
@@ -9,7 +9,7 @@
 		"version": "node version-bump.mjs && git add manifest.json versions.json"
 	},
 	"keywords": [],
-	"author": "",
+	"author": "jujekebab",
 	"license": "MIT",
 	"devDependencies": {
 		"@types/node": "^16.11.6",
